<resources>
    <string name="app_name">eCashier</string>
    <string name="text_aggrement">Dengan menekan Masuk, anda telah menyetujui kebijakan privasi dan Syarat dan Ketentuan yang ada</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_toolbar_profit">Profit</string>
    <string name="title_welcome_app">Welcome to (app)</string>
    <string name="title_profit_report">Profit Report</string>
    <string name="title_latest_product">New Product</string>
    <string name="title_customer">Customer</string>
    <string name="title_monthly_sales_chart">Monthly Sales Chart</string>
    <string name="title_debt_report">Debt Report</string>
    <string name="action_add_debt">Add Debt</string>
    <string name="title_my_debt">My Debt</string>
    <string name="toolbar_title_debt">Debt</string>
    <string name="title_stock_items">Stock and Items</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_low_stock">Low Stock</string>
    <string name="hint_search_item">Search Items</string>
    <string name="title_toolbar_transaction">Transaction</string>
    <string name="title_total_payment">Total Payment</string>
    <string name="action_add">Add</string>
    <string name="hint_qty">Qty</string>
    <string name="info_toast_loading">Mohon Tunggu...</string>
    <string name="info_toast_success_delete">Delete %1$s Successful</string>
    <string name="error_toast_qty_empty">Quantity is still empty. Please set quantity of item</string>
    <string name="error_toast_item_not_selected">You haven\'t seleced item yet</string>
    <string name="error_toast_insufficient_stock">Insufficient stock. Please check your stock`s amount</string>
    <string name="error_toast_load_data_error">Something went wrong. Please try again later</string>
    <string name="dialog_title_loading">Loading..</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_owner_name">Owner Name</string>
    <string name="hint_shop_name">Shop Name</string>
    <string name="hint_shop_address">Shop Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmation_password">Confirmation Password</string>
    <string name="title_toolbar_register_account">Register Account</string>
    <string name="error_field_required">Field is required</string>
    <string name="error_field_password_not_match">Password doesn\'t match</string>
    <string name="action_register">Register</string>
    <string name="title_create_a_new_account">Create a new account</string>
    <string name="info_create_a_new_account">Please put your information below to create a new account for using app.</string>
    <string name="action_login">Login</string>
    <string name="title_toolbar_add_item">Add Item</string>
    <string name="title_toolbar_add_customer">Add Customer</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="action_save">Save</string>
    <string name="hint_amount_nominal">Amount Nominal</string>
    <string name="title_toolbar_add_debt">Add Debt</string>
    <string name="title_record_debt">Record Debt</string>
    <string name="info_record_debt">Make list people owe to me</string>
    <string name="hint_purchase_price">Purchase price</string>
    <string name="hint_selling_price">Selling Price</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_description">Description</string>
    <string name="hint_item_picture">Select Picture</string>
    <string name="hint_unit">Unit</string>
    <string name="title_toolbar_edit_item">Edit Item</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="action_delete">Hapus</string>
    <string name="action_edit">Edit</string>
    <string name="title_toolbar_profile">Profile</string>
    <string name="title_toolbar_profile_edit">Profile Edit</string>
    <string name="error_toast_username_exist">Username is exist. Please change to other username</string>
    <string name="error_toast_user_not_found">User not found</string>
    <string name="alert_toast_success_update_account">Success update account</string>
    <string name="title_menu_privacy_policy">Privacy Policy</string>
    <string name="all_file_cannot_opened">Cannot Open File</string>
    <string name="label_file_not_found">Cannot select file. Please make sure your file is in internal storage.</string>
    <string name="action_logout">Logout</string>
    <string name="error_toast_failed_upload">Failed upload image. Try again or reselect image</string>
    <string name="info_toast_success_add_item">Add Item successful. You can check on Item Page</string>
    <string name="info_toast_success_add_customer">Add Customer successful.</string>
    <string-array name="satuan">
        <item>Pcs</item>
        <item>Kg</item>
        <item>Grams</item>
        <item>Ounce</item>
        //ons
        <item>Box</item>
        //dus
        <item>Dozen</item>
        //lusin
        <item>Liter</item>
    </string-array>
</resources>