<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.profile.edit.ProfileEditActivity">

    <RelativeLayout
        android:id="@+id/relaToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:padding="@dimen/margin_small"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivBack"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_medium">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_black"
                android:text="@string/title_toolbar_profile_edit"
                android:textColor="@color/white"
                android:textSize="@dimen/title_small"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/relaToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/cera_medium"
                android:text="User"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/title_medium" />

            <com.artevak.kasirpos.widget.CustomEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="clickable"
                app:titleEditText="@string/hint_username" />


            <com.artevak.kasirpos.widget.CustomEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="password"
                app:suffixIcon="@drawable/ic_show"
                app:titleEditText="@string/hint_password" />

            <com.artevak.kasirpos.widget.CustomEditText
                android:id="@+id/etCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="password"
                app:suffixIcon="@drawable/ic_show"
                app:titleEditText="@string/hint_confirmation_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/cera_medium"
                android:text="Shop"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/title_medium" />

            <com.artevak.kasirpos.widget.CustomEditText
                android:id="@+id/etOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="person"
                app:titleEditText="@string/hint_owner_name" />

            <com.artevak.kasirpos.widget.CustomEditText
                android:id="@+id/etShopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="person"
                app:titleEditText="@string/hint_shop_name" />

            <com.artevak.kasirpos.widget.CustomEditText
                android:id="@+id/etShopAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="text"
                app:titleEditText="@string/hint_shop_address" />

            <com.artevak.kasirpos.widget.CustomEditText
                android:id="@+id/etShopPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inputType="phone"
                app:titleEditText="@string/hint_phone_number" />

        </LinearLayout>

    </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/action_save_changes"
            app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>