<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.auth.register.RegisterActivity">

    <RelativeLayout
        android:id="@+id/relaToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_small"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/ivBack"
            android:orientation="vertical"
            android:padding="@dimen/margin_extra_small"
            android:paddingHorizontal="10dp">


        </LinearLayout>


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDaftar"
        android:layout_below="@+id/relaToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/title_create_a_new_account"
                android:textSize="@dimen/title_large"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/margin_large"
                android:fontFamily="@font/cera_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/info_create_a_new_account"
                style="@style/Description"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_medium">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="User"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:fontFamily="@font/cera_medium"/>

                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputType="text"
                    app:titleEditText="@string/hint_username" />


                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputType="password"
                    app:suffixIcon="@drawable/ic_show"
                    app:titleEditText="@string/hint_password" />

                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etCPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputType="password"
                    app:suffixIcon="@drawable/ic_show"
                    app:titleEditText="@string/hint_confirmation_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_medium"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="Shop"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:fontFamily="@font/cera_medium"/>

                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etNamaPemilik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputType="person"
                    app:titleEditText="@string/hint_owner_name" />

                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etNamaUmkm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:inputType="person"
                    app:titleEditText="@string/hint_shop_name" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDaftar"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/action_register" />


</RelativeLayout>