<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.item.add.TambahBarangActivity">

    <RelativeLayout
        android:id="@+id/relaToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:padding="@dimen/margin_small">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/margin_small"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivBack"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/cera_black"
                android:text="@string/title_toolbar_add_item"
                android:textColor="@color/white"
                android:textSize="@dimen/title_small"
                android:textStyle="bold" />


        </LinearLayout>


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relaToolbar"
        android:layout_above="@+id/btnSimpan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                app:cardCornerRadius="10dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="175dp">

                    <ImageView
                        android:id="@+id/ivBarang"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/placeholder" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/overlay" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:fontFamily="@font/cera_medium"
                        android:text="@string/hint_item_picture"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="vertical">


                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etNamaBarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleEditText="@string/hint_name"
                    app:inputType="person"
                    />

                <TextView
                    style="@style/Hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_purchase_price" />

                <com.blackcat.currencyedittext.CurrencyEditText
                    android:id="@+id/etHargaBeli"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    style="@style/CustomCurrencyEditText"
                    />

                <TextView
                    style="@style/Hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_selling_price" />

                <com.blackcat.currencyedittext.CurrencyEditText
                    android:id="@+id/etHargaJual"
                    android:layout_width="match_parent"
                    style="@style/CustomCurrencyEditText"/>


                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etStokAwal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="sans-serif"
                    app:titleEditText="@string/hint_stock"
                    app:inputType="numeric"
                    />

                <com.artevak.kasirpos.widget.CustomEditText
                    android:id="@+id/etDeskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="sans-serif"
                    app:titleEditText="@string/hint_description"
                    app:inputType="text"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:fontFamily="@font/cera_medium"
                    android:text="@string/hint_unit"
                    android:textColor="@color/grey_400"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spSatuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@drawable/bg_corner_rounded_fill_field"
                    android:entries="@array/satuan"
                    android:padding="@dimen/margin_small"
                    android:popupBackground="@color/white"
                    tools:listitem="@layout/row_spinner" />


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSimpan"
        style="@style/ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_alignParentBottom="true"
        android:text="@string/action_save" />

</RelativeLayout>