<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/grey_200"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/relaToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="5dp"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/cera_black"
            android:text="@string/title_stock_items"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/relaToolbar"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/ivUser"
            android:inputType="textAutoComplete"
            android:background="@drawable/bg_edittext_rounded"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="@dimen/margin_extra_small"
            android:hint="@string/hint_search_item"
            android:padding="@dimen/padding_field"
            android:id="@+id/etSearch"
            android:textColorHint="@color/grey_400" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTambahBarang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_add_item"
                style="@style/ButtonPrimary"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:id="@+id/btnStokTipis"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_low_stock"
                style="@style/ButtonSecondary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:visibility="gone" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_marginTop="20dp"/>

            <include
                layout="@layout/shimmer_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:id="@+id/tvInfoEmpty"
                android:visibility="gone"
                android:fontFamily="@font/cera_medium"
                android:text="Belum ada barang untuk saat ini"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>




</RelativeLayout>